--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-navigation/material-top-tabs": "^5.2.10",
     "@react-navigation/native": "^5.5.1",
+    "@react-navigation/stack": "^5.5.1",
     "expo": "~37.0.3",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
