--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@chartiful/react-native-chart-builder": "^0.1.8",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-navigation/material-top-tabs": "^5.2.10",
