add async to app

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@chartiful/react-native-horizontal-bar-graph": "^0.1.2",
     "@chartiful/react-native-line-graph": "^0.1.2",
     "@chartiful/react-native-vertical-bar-graph": "^0.1.2",
+    "@react-native-community/async-storage": "^1.11.0",
     "@react-native-community/masked-view": "0.1.6",
     "@react-navigation/material-bottom-tabs": "^5.2.10",
     "@react-navigation/material-top-tabs": "^5.2.10",
